tests/paczka1/small_fuzzy/23782714.err
Error in line 4: FMBmPaO3xT A138 99,6
Error in line 7: zUcPk A138 22,6
